--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -72,6 +72,7 @@
   --color-focused: var(--color);
   --color-hover: var(--color);
   --ripple-color: currentColor;
+  --highlight-transition: transform 200ms, border-bottom-width 200ms;
 
   @include font-smoothing();
 
@@ -367,7 +368,7 @@ button, a {
 
   transform: scaleX(0);
 
-  transition: transform 200ms, border-bottom-width 200ms;
+  transition: var(--highlight-transition);
 
   z-index: 2;
 
@@ -567,4 +568,15 @@ ion-ripple-effect {
   display: none;
 
   color: var(--highlight-color-invalid);
+}
+
+
+// Item: Reduced Motion
+// --------------------------------------------------
+
+@media (prefers-reduced-motion: reduce) {
+  .item-highlight,
+  .item-inner-highlight {
+    --heighlight-transition: none;
+  }
 }
