revert: removed highlight transition css var

--- a/core/src/components/item/item.md.scss
+++ b/core/src/components/item/item.md.scss
@@ -95,6 +95,8 @@
 
   width: calc(100% + 2 * var(--border-width));
   height: calc(100% + 2 * var(--border-width));
+
+  transition: none;
 }
 
 :host(.item-fill-outline.ion-focused) .item-native,
@@ -375,7 +377,6 @@
   --background-hover: transparent;
   --border-color: #{$item-md-input-fill-border-color};
   --border-width: #{$item-md-border-bottom-width};
-  --highlight-transition: none;
 
   border: none;
 
