--- a/core/src/components/item/item.ios.scss
+++ b/core/src/components/item/item.ios.scss
@@ -23,7 +23,6 @@
   --highlight-color-focused: #{$item-ios-input-highlight-color};
   --highlight-color-valid: #{$item-ios-input-highlight-color-valid};
   --highlight-color-invalid: #{$item-ios-input-highlight-color-invalid};
-  --highlight-transition: none;
   --bottom-padding-start: 0px;
 
   font-size: $item-ios-font-size;
@@ -88,6 +87,11 @@
 :host(.item-lines-none) {
   --inner-border-width: 0px;
   --show-inset-highlight: 0;
+}
+
+.item-highlight,
+.item-inner-highlight {
+  transition: none;
 }
 
 :host(.item-has-focus) .item-inner-highlight,
