--- a/core/src/components/modal/test/sheet/index.html
+++ b/core/src/components/modal/test/sheet/index.html
@@ -22,10 +22,10 @@
   <ion-app>
 
     <div class="ion-page">
-      <div class="breakpoint" style="top: calc(10% - 2px)"></div>
+      <!-- <div class="breakpoint" style="top: calc(10% - 2px)"></div>
       <div class="breakpoint" style="top: calc(25% - 2px)"></div>
       <div class="breakpoint" style="top: calc(50% - 2px)"></div>
-      <div class="breakpoint" style="top: calc(75% - 2px)"></div>
+      <div class="breakpoint" style="top: calc(75% - 2px)"></div> -->
 
       <ion-header>
         <ion-toolbar>
