fix(label): label now only takes up as much space as needed when slotted

--- a/core/src/components/label/test/basic/index.html
+++ b/core/src/components/label/test/basic/index.html
@@ -75,6 +75,10 @@
           <ion-label position="stacked" color="danger">Stacked: Danger</ion-label>
           <ion-input></ion-input>
         </ion-item>
+        <ion-item>
+          <ion-input placeholder="Enter a name"></ion-input>
+          <ion-label slot="end">End Label</ion-label>
+        </ion-item>
       </ion-list>
 
       <ion-list>
