fix(): do not regress non end slot behavior

--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -308,6 +308,10 @@ button, a {
   z-index: 1;
 }
 
+::slotted(ion-label:not([slot="end"])) {
+  flex: 1;
+}
+
 
 // Item Input
 // --------------------------------------------------
