fix(): border radius only applies to top corners

--- a/core/src/components/modal/modal.ios.scss
+++ b/core/src/components/modal/modal.ios.scss
@@ -75,6 +75,6 @@
 // iOS Sheet Modal
 // --------------------------------------------------
 
-:host(.modal-sheet) {
-  --border-radius: #{$modal-ios-border-radius};
+:host(.modal-sheet) .modal-wrapper {
+  @include border-radius($modal-ios-border-radius, $modal-ios-border-radius, 0, 0);
 }
