fix(): sheet is only scrollable at when fully open

--- a/core/src/components/modal/test/sheet/index.html
+++ b/core/src/components/modal/test/sheet/index.html
@@ -99,7 +99,7 @@
       if (type === 'sheet') {
         extraOptions = {
           initialBreakpoint: 0.25,
-          breakpoints: [0, .5, .75, .9, .25]
+          breakpoints: [0, 0.25, .5, .75, 1]
         };
       } else if (type === 'card') {
         extraOptions = {
