--- a/core/src/components/modal/modal.scss
+++ b/core/src/components/modal/modal.scss
@@ -65,6 +65,9 @@
 .modal-shadow {
   @include border-radius(var(--border-radius));
 
+  position: absolute;
+  bottom: 0;
+
   width: var(--width);
   min-width: var(--min-width);
   max-width: var(--max-width);
