fix(): handle color is now correct

--- a/core/src/components/modal/modal.scss
+++ b/core/src/components/modal/modal.scss
@@ -124,7 +124,7 @@
   width: 36px;
   height: 5px;
 
-  background: rgba(0, 0, 0, 0.23);
+  background: var(--ion-color-step-350);
 
   z-index: 2;
 }
