add prefixTextAlign property

--- a/core/src/components/picker/test/basic/index.html
+++ b/core/src/components/picker/test/basic/index.html
@@ -65,6 +65,7 @@
         columns: [{
           name: 'hours',
           prefix: 'total',
+          prefixTextAlign: 'center',
           suffix: 'hours',
           options: [{
             text: '1',
