fix(): handle shows up when not using theming vars

--- a/core/src/components/modal/modal.scss
+++ b/core/src/components/modal/modal.scss
@@ -130,7 +130,7 @@
    */
   transform: translateZ(0);
 
-  background: var(--ion-color-step-350);
+  background: var(--ion-color-step-350, #c0c0be);
 
   z-index: 11;
 }
