--- a/core/src/components/modal/test/sheet/index.html
+++ b/core/src/components/modal/test/sheet/index.html
@@ -87,7 +87,7 @@
 
       <ion-content class="ion-padding">
         <ion-button id="sheet-modal" onclick="presentModal()">Present Sheet Modal</ion-button>
-        <ion-button id="sheet-modal" onclick="presentModal({ showBackdrop: false })">Present Sheet Modal (No Backdrop)</ion-button>
+        <ion-button id="sheet-modal" onclick="presentModal({ backdropBreakpoint: 0.5 })">Present Sheet Modal (Custom Backdrop Breakpoint)</ion-button>
         <ion-button id="sheet-modal" onclick="presentModal({ cssClass: 'custom-height' })">Present Sheet Modal (Custom Height)</ion-button>
         <ion-button id="sheet-modal" onclick="presentModal({ cssClass: 'custom-handle' })">Present Sheet Modal (Custom Handle)</ion-button>
 
