fix color items

--- a/core/src/components/item/item.md.scss
+++ b/core/src/components/item/item.md.scss
@@ -20,7 +20,7 @@
   --padding-start: #{$item-md-padding-start};
   --inner-padding-end: #{$item-md-padding-end};
   --inner-border-width: #{0 0 $item-md-border-bottom-width 0};
-  --highlight-height: 2px;
+  --highlight-height: 1px;
   --highlight-color-focused: #{$item-md-input-highlight-color};
   --highlight-color-valid: #{$item-md-input-highlight-color-valid};
   --highlight-color-invalid: #{$item-md-input-highlight-color-invalid};
@@ -31,6 +31,69 @@
   text-transform: none;
 }
 
+:host(.item-fill-outline) {
+  --highlight-height: 2px;
+}
+
+// Item Fill: None
+// --------------------------------------------------
+
+:host(.item-fill-none.item-interactive.item-has-focus) .item-highlight,
+:host(.item-fill-none.item-interactive.ion-touched.ion-invalid) .item-highlight {
+  transform: scaleX(1);
+
+  border-style: var(--border-style);
+  border-color: var(--highlight-background);
+  border-width: var(--full-highlight-height);
+
+  border-top: 0px;
+  border-right: 0px;
+  border-left: 0px;
+}
+
+:host(.item-fill-none.item-interactive.item-has-focus) .item-native,
+:host(.item-fill-none.item-interactive.ion-touched.ion-invalid) .item-native {
+  border-bottom-color: var(--highlight-background);
+}
+
+// Item Fill: Outline
+// --------------------------------------------------
+
+:host(.item-fill-outline.item-interactive.item-has-focus) .item-highlight {
+  transform: scaleX(1);
+}
+
+:host(.item-fill-outline.item-interactive.item-has-focus) .item-highlight,
+:host(.item-fill-outline.item-interactive.ion-touched.ion-invalid) .item-highlight {
+  border-style: var(--border-style);
+  border-color: var(--highlight-background);
+  border-width: var(--full-highlight-height);
+}
+
+:host(.item-fill-outline.item-interactive.ion-touched.ion-invalid) .item-native {
+  border-color: var(--highlight-background);
+}
+
+// Item Fill: Solid
+// --------------------------------------------------
+
+:host(.item-fill-solid.item-interactive.item-has-focus) .item-highlight,
+:host(.item-fill-solid.item-interactive.ion-touched.ion-invalid) .item-highlight {
+  transform: scaleX(1);
+
+  border-style: var(--border-style);
+  border-color: var(--highlight-background);
+  border-width: var(--full-highlight-height);
+
+  border-top: 0px;
+  border-right: 0px;
+  border-left: 0px;
+}
+
+:host(.item-fill-solid.item-interactive.item-has-focus) .item-native,
+:host(.item-fill-solid.item-interactive.ion-touched.ion-invalid) .item-native {
+  border-bottom-color: var(--highlight-background);
+}
 
 // Material Design Item: States
 // --------------------------------------------------
@@ -329,7 +392,6 @@
 
 :host(.item-fill-solid.ion-color),
 :host(.item-fill-outline.ion-color) {
-  --highlight-background: #{current-color(base)};
   --highlight-color-focused: #{current-color(base)};
 }
 
