--- a/core/src/components/item/test/form/index.html
+++ b/core/src/components/item/test/form/index.html
@@ -167,6 +167,134 @@
           </ion-item>
         </div>
       </div>
+
+      <div class="grid">
+        <div class="grid-item">
+          <h2>Color, No fill, Invalid, untouched</h2>
+          <ion-item color="primary" class="ion-invalid ion-untouched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, No fill, Invalid, untouched, focused</h2>
+          <ion-item color="primary" class="ion-invalid ion-untouched item-has-focus">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, No fill, Invalid, touched</h2>
+          <ion-item color="primary" class="ion-invalid ion-touched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, No fill, Valid, untouched</h2>
+          <ion-item color="primary" class="ion-valid ion-untouched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, No fill, Valid, untouched, focused</h2>
+          <ion-item color="primary" class="ion-valid ion-untouched item-has-focus">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, No fill, Valid, touched</h2>
+          <ion-item color="primary" class="ion-valid ion-touched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Outline, Invalid, untouched</h2>
+          <ion-item color="primary" fill="outline" class="ion-invalid ion-untouched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Outline, Invalid, untouched, focused</h2>
+          <ion-item color="primary" fill="outline" class="ion-invalid ion-untouched item-has-focus">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Outline, Invalid, touched</h2>
+          <ion-item color="primary" fill="outline" class="ion-invalid ion-touched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Outline, Valid, untouched</h2>
+          <ion-item color="primary" fill="outline" class="ion-valid ion-untouched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Outline, Valid, untouched, focused</h2>
+          <ion-item color="primary" fill="outline" class="ion-valid ion-untouched item-has-focus">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Outline, Valid, touched</h2>
+          <ion-item color="primary" fill="outline" class="ion-valid ion-touched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Solid, Invalid, untouched</h2>
+          <ion-item color="primary" fill="solid" class="ion-invalid ion-untouched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Solid, Invalid, untouched, focused</h2>
+          <ion-item color="primary" fill="solid" class="ion-invalid ion-untouched item-has-focus">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Solid, Invalid, touched</h2>
+          <ion-item color="primary" fill="solid" class="ion-invalid ion-touched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Solid, Valid, untouched</h2>
+          <ion-item color="primary" fill="solid" class="ion-valid ion-untouched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Solid, Valid, untouched, focused</h2>
+          <ion-item color="primary" fill="solid" class="ion-valid ion-untouched item-has-focus">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+
+        <div class="grid-item">
+          <h2>Color, Solid, Valid, touched</h2>
+          <ion-item color="primary" fill="solid" class="ion-valid ion-touched">
+            <ion-input placeholder="Text"></ion-input>
+          </ion-item>
+        </div>
+      </div>
     </ion-content>
   </ion-app>
 </body>
