fix(modal): handle on sheet modal can now be turned off

--- a/core/src/components/modal/test/sheet/index.html
+++ b/core/src/components/modal/test/sheet/index.html
@@ -90,6 +90,7 @@
         <ion-button id="sheet-modal" onclick="presentModal({ backdropBreakpoint: 0.5 })">Present Sheet Modal (Custom Backdrop Breakpoint)</ion-button>
         <ion-button id="sheet-modal" onclick="presentModal({ cssClass: 'custom-height' })">Present Sheet Modal (Custom Height)</ion-button>
         <ion-button id="sheet-modal" onclick="presentModal({ cssClass: 'custom-handle' })">Present Sheet Modal (Custom Handle)</ion-button>
+        <ion-button id="sheet-modal" onclick="presentModal({ handle: false })">Present Sheet Modal (No Handle)</ion-button>
 
         <div class="grid">
           <div class="grid-item red"></div>
