fix(datetime): do not render header for month and year picker

--- a/core/src/components/datetime/datetime.scss
+++ b/core/src/components/datetime/datetime.scss
@@ -19,7 +19,9 @@
   overflow: hidden;
 }
 
-:host(:not(.datetime-presentation-time)) {
+:host(.datetime-presentation-date-time),
+:host(.datetime-presentation-time-date),
+:host(.datetime-presentation-date) {
   height: 100%;
 }
 
