--- a/core/src/components/@medgrupo/team/questoes/med-alternativas/med-alternativas.scss
+++ b/core/src/components/@medgrupo/team/questoes/med-alternativas/med-alternativas.scss
@@ -1,210 +1,204 @@
 @import "../../../../../../med-components/abstracts";
 
+
 :host {
   --font-size: 16px;
-  --riscar-flex-direction: column;
-  --riscar-icon-margin: 0 0 #{$med-spacing-stack-quark} 0;
+}
 
-  .alternativas {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+:host(.med-alternativas) .med-alternativas__container {
+  display: flex;
+}
 
-    &--imagem {
-      @include breakpoint-up('md') {
-        display: flex;
-        flex-wrap: wrap;
-      }
+:host(.med-alternativas) .med-alternativas__item {
+  cursor: pointer;
+  position: relative;
+  transition: background-color 300ms;
+  min-height: 80px;
+}
 
-      .alternativa {
-        align-items: flex-start;
+:host(.med-alternativas) .option {
+  background: var(--med-color-neutral-8);
+  padding: var(--med-spacing-inset-xs);
+  border-radius: var(--med-border-radius-sm);
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
 
-        &:nth-of-type(odd) {
-          margin-right: auto;
-          padding-right: 0;
+:host(.med-alternativas) .option__letter {
+  font-size: var(--med-font-size-xs);
+  font-weight: var(--med-font-weight-medium);
+  line-height: var(--med-line-height-compressed);
+  color: var(--med-color-neutral-10);
+}
 
-          @include breakpoint-up('md') {
-           padding-right: $med-spacing-inline-base;
-          }
-        }
+:host(.med-alternativas) .option__fake {
+  height: 16px;
+  width: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #fff;
+  border-radius: var(--med-border-radius-full);
+  margin: 0 var(--med-spacing-inline-nano) 0 0;
+  position: relative;
+}
 
-        &:nth-of-type(even) {
-          margin-right: auto;
-        }
+.option__fake:before {
+  content: '';
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  background: #{md-color(questoes, 3)};
+  opacity: 0;
+  transition: opacity 300ms;
+  border-radius: var(--med-border-radius-full);
+}
 
-        &__image {
-          display: block;
+:host(.med-alternativas) .med-alternativas__left {
+  padding: var(--med-spacing-stack-base) var(--med-spacing-stack-base) calc(var(--med-spacing-stack-base) - 10px) var(--med-spacing-stack-base);
+}
 
-          @include breakpoint-up('md') {
-            width: 360px;
-          }
-        }
-      }
-    }
+:host(.med-alternativas) .med-alternativas__right {
+  flex: 1 1 0%;
+  overflow: hidden;
+
+  padding: var(--med-spacing-stack-base) var(--med-spacing-stack-base) calc(var(--med-spacing-stack-base) - 10px) 0;
+  font-size: var(--font-size);
+  font-weight: var(--med-font-weight-regular);
+  line-height: line-height($med-font-size-xs);
+  text-align: justify;
+  color: var(--med-color-neutral-5);
+  cursor: pointer;
+}
+
+:host(.med-alternativas) .med-alternativas__progress-bar {
+  --background: transparent;
+  --height: 8px;
+  transition: all 300ms ease;
+  opacity: 0;
+  transform: translateX(-100%);
+}
+
+:host(.med-alternativas) .med-alternativas__riscar-icon {
+    stroke: var(--med-color-neutral-5);
+}
+
+:host(.med-alternativas) .med-alternativas__list--has-image {
+
+  @include breakpoint-up('md') {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 16px;
   }
 
-  .alternativa-wrapper {
-    &:last-of-type {
-      padding-bottom: 0;
-    }
-  }
-
-  .alternativa {
-    display: flex;
-    align-items: start;
-    padding: $med-spacing-stack-base;
-    cursor: pointer;
-    min-height: 50px;
-
-    .image-container {
-      position: relative;
-    }
-
-    @media (any-hover: hover) {
-      .image-container:hover {
-        .overlay  {
-          opacity: 1;
-          visibility: visible;
-          transition: opacity 300ms ease;
-        }
-      }
-    }
-
-    .overlay {
-      visibility: hidden;
-      opacity: 0;
-      position: absolute;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.3);
-      cursor: pointer;
-      color: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      &__content {
-        display: flex;
-        align-items: center;
-      }
-
-      &__label {
-        margin: 0 10px 0 0;
-      }
-
-      ion-icon {
-        font-size: 24px;
-      }
-    }
-
-    &__right {
-      margin-left: $med-spacing-inline-base;
-      flex: 1;
-      overflow: hidden;
-    }
-
-    &__text {
-      color: $med-color-neutral-dark-10;
-      font-size: var(--font-size);
-      font-weight: $med-font-weight-regular;
-      line-height: line-height();
-      text-align: justify;
-      margin: 0;
-    }
-
-    &__image {
-      width: 100%;
-      height: auto;
-    }
-
-    &__option {
-      position: relative;
-
-      &--riscada {
-        pointer-events: none;
-      }
-    }
-
-    &--correta {
-      med-option {
-        --background: #{$med-color-feedback-success-medium};
-      }
-    }
-
-    &--incorreto {
-      med-option {
-        --background: #{$med-color-feedback-error-medium};
-      }
-    }
-
-    &--pode-riscar:not(:hover) {
-      .riscar {
-        display: none;
-      }
-    }
-
-    &--pode-riscar:hover, &--pode-riscar-mobile {
-      background-color: $med-color-neutral-light-40;
-      .riscar {
-        cursor: pointer;
-        flex-direction: var(--riscar-flex-direction);
-        margin-left: $med-spacing-inline-md;
-        display: flex;
-        align-items: center;
-
-        ion-icon {
-          margin: var(--riscar-icon-margin);
-          color: $med-color-neutral-dark-10;
-          font-size: 32px;
-        }
-
-        &__label {
-          font-size: $med-font-size-xxs;
-          font-weight: $med-font-weight-regular;
-          color: $med-color-neutral-dark-10;
-          line-height: $med-line-height-compressed;
-        }
-      }
-    }
-
-    &--riscada {
-      .alternativa__option {
-        opacity: $med-opacity-level-half;
-      }
-
-      .alternativa__text {
-        text-decoration: line-through;
-        opacity: $med-opacity-level-half;
-      }
-    }
-
-    &--pressed {
-      background-color: $med-color-neutral-light-40;
-    }
-  }
-
-  .ion-progress-bar {
-    transition: all 300ms ease;
-    opacity: 0;
-    transform: translateX(-100%);
-
-    &--toggle {
-      opacity: 1;
-      transform: translateX(0);
-    }
-
-    &--100 {
-      --progress-background: $med-color-feedback-success-light;
-    }
+  .med-alternativas__riscar {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: auto;
+    z-index: 1;
+    background: #000;
+    padding: var(--med-spacing-inset-xs);
+    border-radius: 5px;
+    opacity: 0.5;
   }
 }
 
+:host(.med-alternativas) .image-container__image {
+  max-width: 360px;
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
 // ////////////////////
-// color
+// state alternativa selecionada
 // ////////////////////
 
-:host(.alternativa--pode-riscar:hover),
-:host(.alternativa--pode-riscar-m9bile) {
-  background: #{md-current-color(2)};
+// progress
+:host(.med-alternativas) .med-alternativas__progress-bar--toggle {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+:host(.med-alternativas) .med-alternativas__item--selecionada .option {
+  background: #{md-color(questoes, 3)};
+}
+
+:host(.med-alternativas) .med-alternativas__item--certa .option {
+  background: #{md-color(fb-success, 3)};
+}
+
+:host(.med-alternativas) .med-alternativas__item--correta .option {
+  background: #{md-color(fb-success, 3)};
+}
+
+:host(.med-alternativas) .med-alternativas__item--incorreta .option {
+  background: #{md-color(fb-warning, 3)};
+}
+
+:host(.med-alternativas) .med-alternativas__item--selecionada .option__fake:before,
+:host(.med-alternativas) .med-alternativas__item--correta .option__fake:before,
+:host(.med-alternativas) .med-alternativas__item--incorreta .option__fake:before {
+  opacity: 1;
+}
+
+:host(.med-alternativas) .med-alternativas__item--certa .option__fake:before {
+  opacity: 0;
+}
+
+:host(.med-alternativas) .med-alternativas__item--show {
+  background: var(--med-color-neutral-9);
+}
+
+:host(.med-alternativas) .med-alternativas__riscar {
+  color: var(--med-color-neutral-5);
+  padding: var(--med-spacing-inline-base);
+  font-size: var(--med-font-size-xxs);
+  font-weight: var(--med-font-weight-regular);
+  line-height: var(--med-line-height-compressed);
+  height: 100%;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+:host(.med-alternativas) .med-alternativas__item--riscado {
+  .med-alternativas__left,
+  .med-alternativas__right,
+  .med-alternativas__progress-bar {
+    opacity: 0.5;
+  }
+
+  .med-alternativas__text {
+    text-decoration: line-through;
+  }
+}
+
+:host(.med-alternativas) .med-alternativas__riscar--show {
+  display: flex;
+}
+
+:host(.med-alternativas) .med-alternativas__riscar-span {
+  display: flex;
+}
+
+:host(.med-alternativas) .med-alternativas__riscar-desktop {
+  display: none;
+  padding-left: var(--med-spacing-inline-nano);
+  @include breakpoint-up('md') {
+    display: flex;
+  }
+}
+
+@media (any-hover: hover) {
+  :host(.med-alternativas) .med-alternativas__item--permite-riscar:hover {
+    background: var(--med-color-neutral-9);
+  }
+
+  :host(.med-alternativas) .med-alternativas__item--permite-riscar:hover .med-alternativas__riscar {
+    display: flex;
+  }
 }
