--- a/core/src/components/@medgrupo/global/med-rate-bar/med-rate-bar.scss
+++ b/core/src/components/@medgrupo/global/med-rate-bar/med-rate-bar.scss
@@ -13,7 +13,7 @@
   font-size: var(--font-size);
   font-weight: var(--font-weight);
   line-height: var(--line-height);
-  color: #{$med-color-neutral-dark-10};
+  color: #{color('neutral', '2', 'contrast')};
 
   display: flex;
   justify-content: space-between;
