fix(footer): Remove Toolbar padding if in Tabs (bottom) or Keyboard opened
closes #17560

--- a/core/src/components/tabs/test/placements/index.html
+++ b/core/src/components/tabs/test/placements/index.html
@@ -14,6 +14,7 @@
   <style>
     :root {
       --ion-safe-area-top: 20px;
+      --ion-safe-area-bottom: 40px;
     }
   </style>
 </head>
@@ -32,6 +33,11 @@
         <ion-content class="ion-padding">
           Tab One
         </ion-content>
+        <ion-footer>
+          <ion-toolbar>
+            <ion-title>Footer</ion-title>
+          </ion-toolbar>
+        </ion-footer>
 
       </ion-tab>
 
